--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,19 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
+    signingConfigs {
+        config {
+            storeFile file('E:/lyf.jks')
+            keyPassword '123456'
+            storePassword '123456'
+            keyAlias 'lyf'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "car.com.wlc.cardemo"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -44,4 +52,7 @@ dependencies {
     apt 'com.zhy:mpermission-compiler:1.0.0'
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.github.wangjiegulu:RapidFloatingActionButton:1.0.3'
+    compile 'com.github.mancj:MaterialSearchBar:0.1.0'
 }
